@@ -96,10 +96,10 @@ class LocalizationConsistencyTest {
     @Test
     void languageKeysShouldNotContainUnderscoresForSpaces() throws IOException {
         final List<LocalizationEntry> quotedEntries = LocalizationParser
-                .findLocalizationParametersStringsInJavaFiles(LocalizationBundleForTest.LANG)
+                .findLocalizationParametersStringsInJavaFiles()
                 .stream()
                 .filter(key -> key.getKey().contains("\\_"))
-                .collect(Collectors.toList());
+                .toList();
         assertEquals(List.of(), quotedEntries,
                 "Language keys must not use underscores for spaces! Use \"This is a message\" instead of \"This_is_a_message\".\n" +
                         "Please correct the following entries:\n" +
@@ -112,10 +112,10 @@ class LocalizationConsistencyTest {
     @Test
     void languageKeysShouldNotContainHtmlBrAndHtmlP() throws IOException {
         final List<LocalizationEntry> entriesWithHtml = LocalizationParser
-                .findLocalizationParametersStringsInJavaFiles(LocalizationBundleForTest.LANG)
+                .findLocalizationParametersStringsInJavaFiles()
                 .stream()
                 .filter(key -> key.getKey().contains("<br>") || key.getKey().contains("<p>"))
-                .collect(Collectors.toList());
+                .toList();
         assertEquals(List.of(), entriesWithHtml,
                 "Language keys must not contain HTML <br> or <p>. Use \\n for a line break.\n" +
                         "Please correct the following entries:\n" +
@@ -127,7 +127,7 @@ class LocalizationConsistencyTest {
 
     @Test
     void findMissingLocalizationKeys() throws IOException {
-        List<LocalizationEntry> missingKeys = new ArrayList<>(LocalizationParser.findMissingKeys(LocalizationBundleForTest.LANG));
+        List<LocalizationEntry> missingKeys = new ArrayList<>(LocalizationParser.findMissingKeys());
         assertEquals(List.of(), missingKeys,
                 missingKeys.stream()
                            .map(key -> LocalizationKey.fromKey(key.getKey()))
@@ -148,7 +148,7 @@ class LocalizationConsistencyTest {
 
     @Test
     void findObsoleteLocalizationKeys() throws IOException {
-        Set<String> obsoleteKeys = LocalizationParser.findObsolete(LocalizationBundleForTest.LANG);
+        Set<String> obsoleteKeys = LocalizationParser.findObsolete();
         assertEquals(Set.of(), obsoleteKeys,
                 obsoleteKeys.stream().collect(Collectors.joining("\n",
                         "Obsolete keys found in language properties file: \n\n",
@@ -168,16 +168,11 @@ class LocalizationConsistencyTest {
         // - Localization.lang("test %1", var)
         // - Localization.lang("Problem downloading from %1", address)
         // - Localization.lang("test %1 %2", var1, var2)
-        Set<LocalizationEntry> keys = LocalizationParser.findLocalizationParametersStringsInJavaFiles(LocalizationBundleForTest.LANG);
+        Set<LocalizationEntry> keys = LocalizationParser.findLocalizationParametersStringsInJavaFiles();
         for (LocalizationEntry e : keys) {
             // TODO: Forbidden Localization.lang("test" + var2) not covered by the test
             //       In case this kind of code is found, an error should be reported
             //       JabRef's infrastructure only supports Localization.lang("Some Message"); and not something else.
-            assertTrue(e.getKey().startsWith("\""), "Illegal localization parameter found. Must include a String with potential concatenation or replacement parameters. Illegal parameter: Localization.lang(" + e.getKey());
-        }
-
-        keys = LocalizationParser.findLocalizationParametersStringsInJavaFiles(LocalizationBundleForTest.MENU);
-        for (LocalizationEntry e : keys) {
             assertTrue(e.getKey().startsWith("\""), "Illegal localization parameter found. Must include a String with potential concatenation or replacement parameters. Illegal parameter: Localization.lang(" + e.getKey());
         }
     }
